# ratatui-garnish

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: compare_compositions.rs  traditional_and_flat_decorator.rs
examples/: borders.rs  padding.rs  shadow.rs  titles.rs
src/: border.rs  decorator.rs  garnishable.rs  lib.rs  padding.rs  shadow.rs  title.rs
