[package]
name = "ratatui-garnish"
version = "0.1.0"
description = "Garnish Ratatui Widgets"
authors = ["Frank Laranja <laranja@riseup.net>"]
repository = "https://github.com/franklaranja/ratatui-garnish"
keywords = [
    "tui",
    "decorator",
    "widgets",
    "ratatui",
    "proc-macros",
]
categories = [
    "tui",
]
readme = "README.md"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
derive_more = { version = "2.0.0", features = ["deref", "deref_mut", "from"] }
nodyn = { version = "0.2.2", default-features = false }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref", "unstable-rendered-line-info"] }
unicode-width = "0.2.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic =  "warn"

# nursery or restricted                                                                 as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
or_fun_call = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
as_underscore = "warn"
